eksctl_scripts/elb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service-elb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: socket-io-service
