eksctl_scripts/socket.io-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socket-io-service
  labels:
    app: chat-service-redis
    tier: frontend
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  # type: NodePort 
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: LoadBalancer
  ports:
  - port: 3000
  selector:
    app: chat-service-redis
    tier: frontend
