eksctl_scripts/elb-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chat-service-elb-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "client-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  rules:
  - host: acd2d368920fc43abb0f7a644fe468db-504026720.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        backend:
          serviceName:  chat-service-elb
          servicePort: 80
